# actr-notebook

./: .gitignore  Chapter 1.ipynb  Chapter 2.ipynb  Chapter 3.ipynb  README.md  README.org  TODO.org  index.html  publish.sh  pyproject.toml  shell.nix
.ipynb_checkpoints/: Chapter 2-checkpoint.ipynb
