[tool.poetry]
name = "actr-notebook"
version = "0.1.0"
description = ""
authors = ["Patrick Elliott <patrick.d.elliott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyactr = "^0.2.4"
setuptools_scm = "^4.0.0"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
